--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "buffer": "^6.0.3",
     "color": "^4.2.3",
     "color-convert": "^2.0.1",
-    "elliptic": "^6.5.4",
     "framer-motion": "^11.0.3",
+    "jsrsasign": "^11.1.0",
+    "jsrsasign-util": "^1.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
@@ -52,6 +53,6 @@
     ]
   },
   "devDependencies": {
-    "@types/elliptic": "^6.4.18"
+    "@types/jsrsasign": "^10.5.12"
   }
 }
