--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.0.3",
     "jsrsasign": "^11.1.0",
     "jsrsasign-util": "^1.0.5",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "@types/jsrsasign": "^10.5.12"
+    "@types/jsrsasign": "^10.5.12",
+    "@types/lodash": "^4.14.202"
   }
 }
