--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,18 +1,47 @@
-name: Docker Image CI
-
+name: Build and Release Docker Image to Google Artifact Registry
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-
 jobs:
-
-  build:
-
+  docker-release:
+    name: Image release to Google Artifact Registry
     runs-on: ubuntu-latest
+    environment: deploy
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+
+    permissions:
+      contents: 'read'
+      id-token: 'write'
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag asia-south2-docker.pkg.dev/secureboot-io/secureboot-io/escboot-webtool:$(date +%s)
+      - id: checkout
+        name: Checkout
+        uses: actions/checkout@v3
+      - id: build
+        name: Build
+        run: docker build . --file Dockerfile --tag asia-south2-docker.pkg.dev/secure
+      - id: auth
+        name: Authenticate with Google Cloud
+        uses: google-github-actions/auth@v1.1.1
+        with:
+          token_format: access_token
+          workload_identity_provider: ${{ secrets.PROVIDER_ID }}
+          service_account: ${{ secrets.SERVICE_ACCOUNT }}@${{ secrets.PROJECT_ID }}.iam.gserviceaccount.com
+          access_token_lifetime: 300s
+      - name: Login to Artifact Registry
+        uses: docker/login-action@v3.0.0
+        with:
+          registry: ${{ secrets.REGION }}-docker.pkg.dev
+          username: oauth2accesstoken
+          password: ${{ steps.auth.outputs.access_token }}
+      - name: Get tag
+        id: get-tag
+        run: echo ::set-output name=short_ref::${GITHUB_REF#refs/*/}
+      - id: docker-push-tagged
+        name: Tag Docker image and push to GAR
+        uses: docker/build-push-action@v5.0.0
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ secrets.REGION }}-docker.pkg.dev/${{ secrets.PROJECT_ID }}/${{ secrets.GAR_REPO }}/${{ secrets.IMAGE_NAME }}:${{ steps.get-tag.outputs.short_ref }}
+            ${{ secrets.REGION }}-docker.pkg.dev/${{ secrets.PROJECT_ID }}/${{ secrets.GAR_REPO }}/${{ secrets.IMAGE_NAME }}:latest
